# monita

./: .gitignore  README.md  meson.build
data/: app.desktop  app.gresource.xml  meson.build  style.css
src/: Application.vala  GraphWidget.vala  MainWindow.vala  OverviewView.vala  ProcessInfo.vala  ProcessesView.vala  Utils.vala
vapi/: libgtop-2.0.vapi
